# accord

./: Cargo.toml  Readme.md  encryption_outline.txt
accord-gui/: Cargo.toml
accord-gui/src/: config.rs  connection_handler.rs  controllers.rs  main.rs  widgets.rs
client/: Cargo.toml
client/src/: client.rs  console.rs  main.rs
server/: Cargo.toml
server/src/: channel.rs  commands.rs  config.rs  connection.rs  lib.rs  logging.rs  main.rs  tui.rs
src/: connection.rs  lib.rs  packets.rs  utils.rs
