[package]
name = "accord"
version = "0.2.0"
edition = "2021"
authors = ["LoipesMas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "client",
    "server",
    "accord-gui",
]


[dependencies]
serde = {version = "1.0.133", features = ["derive"]}
rmp-serde = "1.0.0"
tokio = {version = "1.15.0", features = ["full"]}
bytes = "1.1"
chacha20poly1305 = "0.9.0"
rand = "0.8.4"
rand_chacha = "0.3.1"

[profile.dev.package.num-bigint-dig]
opt-level = 3
