[package]
name = "accord-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features=["im"] }
reqwest = "0.11"
image = "0.24.1"
flexi_logger = "0.22.3"
log = "*"
toml = "0.5.9"
serde = "*"
xdg = "2.4.1"

accord = {path = ".."}
tokio = {version = "1.15.0", features = ["full"]}
bytes = "1.1"
chrono = "0.4.19"
rsa = "0.5.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
