[package]
name = "accord-client"
version = "0.1.0"
edition = "2021"
authors = ["LoipesMas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accord = {path = ".."}
tokio = {version = "1.15.0", features = ["full"]}
bytes = "1.1"
chrono = "0.4.19"
