[package]
authors = ["LoipesMas"]
edition = "2021"
name = "accord-client"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accord = {path = ".."}
bytes = "1.1"
chrono = "0.4.19"
console_engine = {version = "2.3.0", features = ["event"]}
rand = "0.8.4"
rand_chacha = "0.3.1"
rsa = "0.5.0"
tokio = {version = "1.15.0", features = ["full"]}
