[package]
name = "accord-server"
version = "0.1.0"
edition = "2021"
authors = ["LoipesMas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accord = {path = ".."}
tokio = {version = "1.15.0", features = ["full"]}
sha2 = "0.10.1"
rand = "0.8.4"
rsa = "0.5.0"
rand_chacha = "0.3.1"
